<resources>
    <string name="app_name">Ali-Choix</string>
    <!--    Navigation namings-->
    <string name="title_home">Accueil</string>
    <string name="title_scan">Scan</string>
    <string name="title_scanned_product">Produit scanné</string>
    <string name="title_history">Historique</string>
    <string name="title_options">Options</string>

    <!--    Scanned product fragment namings-->
    <string name="naming_origin">Origine</string>
    <string name="naming_imported_country">Pays importé</string>
    <string name="naming_quantity">Quantité</string>
    <string name="naming_nutri_score_collapsible_header_section">Nutri-score</string>
    <string name="naming_eco_score_collapsible_header_section">Eco-score</string>
    <string name="naming_ingredients_analysis_collapsible_header_section">Analyse des ingrédients</string>
    <string name="naming_vegan">Alimentation végétalienne</string>
    <string name="naming_vegeterian">Alimentation végétarienne</string>
    <string name="naming_palm_oil">Huile de palme</string>
    <string name="naming_fat_quantity">Gras</string>
    <string name="naming_saturated_fat_quantity">Gras saturés</string>
    <string name="naming_sugars_quantity">Sucres</string>
    <string name="naming_salt_quantity">Sel</string>
    <string name="naming_nutrient_levels_collapsible_header_section">Niveaux de nutriments pour 100g</string>
    <string name="naming_ingredients_collapsible_header_section">Apports nutritionnels</string>


    <!--    Home fragment naming-->
    <string name="home_page_middle_text">Alimentation saine, durable, en toute simplicité!</string>
    <string name="home_page_bottom_text">Recherchez vos produits dès maintenant!</string>

    <!--    About fragment naming-->
    <string name="about_text">Cet espace contiendra l\'information de l\'à propos</string>
    <string name="about_hyperlink"><a href="https://www.aliquebec.org/">Suivez le lien pour connaître nos collaborateurs</a></string>
</resources>