<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.ulaval.ima.ali_choix.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="ca.ulaval.ima.ali_choix.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_navigation_scanned_product"
            app:destination="@id/navigation_scanned_product" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scanned_product"
        android:name="ca.ulaval.ima.ali_choix.ui.scannedproduct.ScannedProductFragment"
        android:label="@string/title_scanned_product"
        tools:layout="@layout/fragment_scanned_product" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ca.ulaval.ima.ali_choix.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>