<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="120dp"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/scanned_product_image"
                    android:layout_width="wrap_content"
                    android:layout_height="121dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="80dp"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/scanned_product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center_horizontal"
                    android:minWidth="140dp"
                    android:minHeight="120dp"
                    android:padding="20dp"
                    android:text="Salut comment ça va moi super bien je capote"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/naming_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/naming_origin"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/naming_imported_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/naming_origin"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/naming_imported_country"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/naming_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/naming_imported_country"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/naming_quantity"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/scanned_product_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/naming_imported_country"
                        android:layout_marginLeft="48dp"
                        android:text="Canada"/>

                    <TextView
                        android:id="@+id/scanned_product_imported_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/scanned_product_origin"
                        android:layout_toRightOf="@id/naming_imported_country"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="24dp"
                        android:text="Canada"/>

                    <TextView
                        android:id="@+id/scanned_product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/naming_imported_country"
                        android:layout_below="@id/scanned_product_imported_country"
                        android:text="Canada"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="48dp"/>
                </RelativeLayout>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</RelativeLayout>